# olympia-tag

./: .gitignore  AUTHORS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
doc/: modernization-64bit-plan.md
lib/: accept_ents.c  admits.c  checked_alloc.c  checked_alloc.h  cstrings.c  effects.c  entity_builds.c  exit_views.c  fights.c  flag_ents.c  ilist.c  item_ents.c  lists.h  orders.c  plist.c  req_ents.c  ring_buffer.c  ring_buffer.h  roads.c  skill_ents.c  tiles.c  trades.c  wait_args.c
olympia/: art.c  basic.c  buy.c  c2.c  check.c  cloud.c  code.c  combat.c  day.c  dir.c  display.c  eat.c  effect.c  etc.h  garr.h  glob.c  gm.c  immed.c  io.c  legacy.h  loc.h  main.c  mining.c  move.c  necro.c  npc.c  oly.h  order.h  quest.c  relig.h  report.c  seed.c  sout.c  stack.c  storm.c  swear.c  swear.h  times.c  trading.c  u.h  (+4 more)
run/: olympia-tag.sh  tag-olympia.sh
run/olympia/: .gitignore
tag/doc/: Makefile  r.texi
tag/olympia/: add.c  alchem.c  artifacts.c  beast.c  build.c  c1.c  cloud.c  code.h  dir.h  display.h  effect.h  faery.c  garr.c  gm.c  hades.c  input.c  kill.c  legacy.h  loop.h  lore.c  main.c  make.c  map.c  oly.h  order.c  perm.c  produce.c  relig.c  savage.c  scry.c  shipcraft.c  sout.h  stack.h  stealth.c  summary.c  times.c  u.c  use.h  z.h
tests/olympia/: golden_check.sh
tests/olympia/golden/: manifest.sha256
tests/tag/olympia/fixtures/: lib.tgz
