cmake_minimum_required(VERSION 4.1)
project(olympia-tag C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

function(legacy_build_flags tgt)
    # Flags to hide legacy code warnings.
    # We'll need to roll some of these back when we're updating the code to run as 64-bit.
    target_compile_options(${tgt} PRIVATE
        -Wno-comment
        -Wno-compare-distinct-pointer-types
        -Wno-dangling-else
        -Wno-deprecated-declarations
        -Wno-deprecated-non-prototype
        -Wno-extra-tokens
        -Wno-format
        -Wno-format-security
        -Wno-implicit-function-declaration
        -Wno-incompatible-library-redeclaration
        -Wno-incompatible-pointer-types
        -Wno-int-conversion
        -Wno-int-to-pointer-cast
        -Wno-logical-not-parentheses
        -Wno-macro-redefined
        -Wno-multichar
        -Wno-non-literal-null-conversion
        -Wno-parentheses
        -Wno-pointer-to-int-cast
        -Wno-return-mismatch
        -Wno-return-type
        -Wno-sizeof-pointer-memaccess
        -Wno-tautological-constant-out-of-range-compare
    )
endfunction()

function(phase_1_build_flags tgt)
    # i/pointer lists triage - only pointer-cast errors.
    target_compile_options(${tgt} PRIVATE
        -Wint-to-pointer-cast -Werror=int-to-pointer-cast
        -Wpointer-to-int-cast -Werror=pointer-to-int-cast
    )
endfunction()

function(phase_2_build_flags tgt)
    # incompatible pointer types
    target_compile_options(${tgt} PRIVATE
        -Wincompatible-pointer-types -Werror=incompatible-pointer-types
    )
endfunction()

function(phase_3_build_flags tgt)
    # integer conversions
    target_compile_options(${tgt} PRIVATE
        -Wint-conversion -Werror=int-conversion
    )
endfunction()

function(phase_4_build_flags tgt)
    # forward declarations; start turning on errors
    target_compile_options(${tgt} PRIVATE
        -Wmissing-prototypes -Werror=missing-prototypes
        -Wstrict-prototypes -Werror=strict-prototypes
        -Wimplicit-function-declaration -Werror=implicit-function-declaration
    )
endfunction()

function(phase_5_build_flags tgt)
    # C11's enabled, sanitizers enabled
    target_compile_options(${tgt} PRIVATE
        -Wmissing-declarations -Werror=missing-declarations
        # string literal to char* is a classic legacy footgun
        #-Wwrite-strings #-Werror=write-strings
        -fno-common
        -fno-omit-frame-pointer
        -fno-optimize-sibling-calls
        -fsanitize=address,undefined
        -fno-sanitize-recover=all
    )
    target_link_options(${tgt} PRIVATE
        -fno-common
        -fno-omit-frame-pointer
        -fno-optimize-sibling-calls
        -fsanitize=address,undefined
        -fno-sanitize-recover=all
    )
endfunction()

option(OLYMPIA_SANITIZE "Enable sanitizer instrumentation" OFF)
set(OLYMPIA_SANITIZERS "" CACHE STRING "Comma-separated sanitizers, e.g. address,undefined"
    address,undefined
)

function(olympia_enable_sanitizers tgt)
    if(NOT OLYMPIA_SANITIZE)
        return()
    endif()
    if(NOT OLYMPIA_SANITIZERS)
        message(FATAL_ERROR "OLYMPIA_SANITIZE is ON but OLYMPIA_SANITIZERS is empty")
    endif()

    # Sanitizers are supported on Clang/GCC; MSVC uses different flags.
    if (CMAKE_C_COMPILER_ID MATCHES "Clang|GNU")
        # Compile and Link flags must match!
        target_compile_options(${tgt} PRIVATE
            -fsanitize=${OLYMPIA_SANITIZERS}
            -fno-omit-frame-pointer
            -fno-optimize-sibling-calls
            -fno-sanitize-recover=all
            -fno-common
        )
        target_link_options(${tgt} PRIVATE
            -fsanitize=${OLYMPIA_SANITIZERS}
            -fno-omit-frame-pointer
            -fno-optimize-sibling-calls
            -fno-sanitize-recover=all
            -fno-common
        )
        if (CMAKE_C_COMPILER_ID MATCHES "Clang")
            # -fsanitize-address-use-after-scope is Clang-only
            target_compile_options(${tgt} PRIVATE
                -fsanitize-address-use-after-scope
            )
            target_link_options(${tgt} PRIVATE
                -fsanitize-address-use-after-scope
            )
        endif()
    else()
        message(WARNING "OLYMPIA_SANITIZE is ON but compiler is not Clang/GNU; sanitizers not enabled.")
    endif()
endfunction()

# Engine-specific flags to hide legacy code warnings. We'll need to roll
# some of these back when we're updating the code to run as 64-bit.
set(LEGACY_C_FLAGS
        -Wno-comment
        -Wno-compare-distinct-pointer-types
        -Wno-dangling-else
        -Wno-deprecated-declarations
        -Wno-deprecated-non-prototype
        -Wno-extra-tokens
        -Wno-format
        -Wno-format-security
        -Wno-implicit-function-declaration
        -Wno-incompatible-library-redeclaration
        -Wno-incompatible-pointer-types
        -Wno-int-conversion
        -Wno-int-to-pointer-cast
        -Wno-logical-not-parentheses
        -Wno-macro-redefined
        -Wno-multichar
        -Wno-non-literal-null-conversion
        -Wno-parentheses
        -Wno-pointer-to-int-cast
        -Wno-return-mismatch
        -Wno-return-type
        -Wno-sizeof-pointer-memaccess
        -Wno-tautological-constant-out-of-range-compare
)

# Create a stricter set of compiler flags to catch
set(LEGACY_C_FLAGS_STRICT
        ${LEGACY_C_FLAGS}
)

# Remove suppressions that hide 64-bit hazards
list(REMOVE_ITEM LEGACY_C_FLAGS_STRICT
        -Wno-int-conversion
        -Wno-int-to-pointer-cast
        -Wno-pointer-to-int-cast
        -Wno-implicit-function-declaration
        -Wno-return-mismatch
        -Wno-return-type
)

# ------------------------------------------------------------------------------
# 32-bit build support
# ------------------------------------------------------------------------------
# Enable 32-bit builds on 64-bit Linux systems for generating golden test files
# from the original legacy code before 64-bit refactoring.
#
# Usage:
#   mkdir build32 && cd build32
#   cmake -DBUILD_32BIT=ON ..
#   cmake --build .
#
option(BUILD_32BIT "Build 32-bit binaries (requires gcc-multilib on Linux)" OFF)

if (BUILD_32BIT)
    message(STATUS "32-bit build enabled (-g -m32)")
    add_compile_options(-g -m32)
    add_link_options(-g -m32)
endif()

# Platform-specific defines
if (LINUX)
    add_compile_definitions(OLYMPIA_CC_LINUX)
endif ()
if (WIN32)
    add_compile_definitions(OLYMPIA_CC_WINDOWS)
endif ()

# ------------------------------------------------------------------------------
# TAG olympia (main game engine; no mapgen in this engine)
# ------------------------------------------------------------------------------
add_executable(tag-olympia)
target_sources(tag-olympia
    PRIVATE
        tag/olympia/add.c tag/olympia/adv.c tag/olympia/alchem.c tag/olympia/art.c
        tag/olympia/artifacts.c tag/olympia/basic.c tag/olympia/beast.c tag/olympia/build.c
        tag/olympia/buy.c tag/olympia/c1.c tag/olympia/c2.c tag/olympia/check.c tag/olympia/cloud.c
        tag/olympia/code.c tag/olympia/combat.c tag/olympia/day.c tag/olympia/dir.c
        tag/olympia/display.c tag/olympia/eat.c tag/olympia/effect.c tag/olympia/faery.c
        tag/olympia/garr.c tag/olympia/gate.c tag/olympia/glob.c tag/olympia/gm.c tag/olympia/hades.c
        tag/olympia/hero.c tag/olympia/immed.c tag/olympia/input.c tag/olympia/io.c
        tag/olympia/kill.c tag/olympia/loc.c tag/olympia/lore.c tag/olympia/main.c tag/olympia/make.c
        tag/olympia/map.c tag/olympia/mining.c tag/olympia/move.c tag/olympia/necro.c
        tag/olympia/npc.c tag/olympia/order.c tag/olympia/perm.c tag/olympia/produce.c
        tag/olympia/quest.c tag/olympia/ranger.c tag/olympia/relig.c tag/olympia/report.c
        tag/olympia/savage.c tag/olympia/scry.c tag/olympia/seed.c tag/olympia/shipcraft.c
        tag/olympia/sout.c tag/olympia/stack.c tag/olympia/stealth.c tag/olympia/storm.c
        tag/olympia/summary.c tag/olympia/swear.c tag/olympia/times.c tag/olympia/trading.c
        tag/olympia/u.c tag/olympia/use.c tag/olympia/win.c
        tag/olympia/z.c
        lib/checked_alloc.c
        lib/accept_ents.c lib/admits.c lib/cstrings.c lib/effects.c
        lib/entity_builds.c lib/exit_views.c lib/fights.c lib/flag_ents.c
        lib/item_ents.c lib/ilist.c lib/orders.c lib/plist.c lib/req_ents.c
        lib/roads.c lib/skill_ents.c lib/tiles.c lib/trades.c lib/wait_args.c
)
target_sources(tag-olympia
    PRIVATE
    FILE_SET HEADERS
    BASE_DIRS
        tag/olympia lib
    FILES
        tag/olympia/code.h tag/olympia/combat.h tag/olympia/dir.h tag/olympia/display.h
        tag/olympia/eat.h tag/olympia/effect.h tag/olympia/etc.h tag/olympia/garr.h
        tag/olympia/kill.h tag/olympia/legacy.h tag/olympia/loc.h tag/olympia/loop.h
        tag/olympia/oly.h tag/olympia/oly3.h tag/olympia/order.h tag/olympia/quest.h
        tag/olympia/relig.h tag/olympia/sout.h tag/olympia/stack.h tag/olympia/swear.h
        tag/olympia/u.h tag/olympia/use.h tag/olympia/z.h
        lib/checked_alloc.h lib/lists.h
)
target_include_directories(tag-olympia PRIVATE tag/olympia/ lib/)
target_compile_options(tag-olympia PRIVATE -Og -g
    -DLINUX -DNEW_TRADE
)
legacy_build_flags(tag-olympia)
phase_1_build_flags(tag-olympia)
phase_2_build_flags(tag-olympia)
phase_3_build_flags(tag-olympia)
phase_4_build_flags(tag-olympia)
phase_5_build_flags(tag-olympia)
